fix email, preserve line breaks in body for apply groups

--- a/src/scss/pages/_apply.scss
+++ b/src/scss/pages/_apply.scss
@@ -55,6 +55,7 @@
       .team--body {
         -webkit-font-smoothing: antialiased;
         margin-bottom: 53px;
+        white-space: pre-line;
       }
       .team--application-listing {
         .team--application-listing--item {
